--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,6 +12,8 @@ License: What license is it under?
 Encoding: UTF-8
 LazyData: true
 Imports:
+    genridge,
+    glmnet,
     MASS,
     olsrr,
     onewaytests
